css/style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
/* COMMON */
html {
  font-family: "Montserrat", sans-serif;
  font-size: 100%;
  color: white;

  /* background-color: black; */
}
body {
  width: 100%;
  height: 100vh;
}
img {
  width: 100%;
}
a {
  text-decoration: none;
  color: inherit;
}
ul {
  list-style: none;
  list-style-position: inside;
}

/* HEADER */
header {
  background-color: rgba(0, 0, 6, 0.8);
  /* height: 10vh; */
  width: calc(100% - 200px);
  padding: 1em 0em;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  position: fixed;
  top: 0;
  right: 0;
  z-index: 999;
}

header .upgrade {
  border: 1px solid white;
  padding: 0.5em 1em;
  border-radius: 30px;
  margin-right: 1em;
}
header .upgrade a {
  font-size: 0.7rem;
}
header .upgrade:hover a {
  font-weight: bold;
  font-size: 0.8rem;
}

/* SIDEBAR */
.sidebar {
  background-color: black;
  height: calc(100vh - 5em);
  width: 200px;
  padding: 1em;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  overflow-y: auto;
  overflow-x: hidden;
}

.logo {
  margin-bottom: 1em;
  width: 80%;
}
.logo #logo-big {
  /* object-fit: cover; */
  width: 100%;
  height: 2.5em;
}
#logo-small {
  display: none;
}

.upper-menu > * {
  margin-bottom: 1em;
  color: #a3a3a3;
  font-size: 0.8rem;
}

.upper-menu > *:hover {
  color: white;
  font-weight: 500;
}

.upper-menu svg {
  width: 1.5em;
  margin-right: 0.3em;
  vertical-align: middle;
  fill: #a3a3a3;
}

.playlist {
  overflow-y: auto;
  height: 35vh;
}
.playlist > * {
  margin-bottom: 0.8em;
  font-size: 0.8rem;
  color: #a3a3a3;
}
.playlist > *:hover {
  color: white;
  font-weight: 600;
}

#add-i {
  background-color: #a3a3a3;
  padding: 0.5em;
  color: black;
}

.playlist .add-playlist:hover #add-i {
  background-color: white;
}

.lower-menu {
  padding-top: 1em;
}
.lower-menu > * {
  margin-bottom: 1em;
  color: #a3a3a3;
  font-size: 0.8rem;
}
.lower-menu li:first-child:hover {
  color: white;
}
.lower-menu svg {
  width: 1.2em;
  margin-right: 0.3em;
  vertical-align: middle;
}
#account {
  width: 20px;
  height: 20px;
  object-fit: cover;
  /* background-color: #a3a3a3; */
  border-radius: 50%;
}

.lower-menu li:last-child {
  font-weight: bold;
  color: white;
}

/* .menu svg {
  fill: #a3a3a3;
} */

/* MAIN CONTENT*/
.container {
  width: calc(100% - 200px);
}

main {
  display: flex;
  /* height: 90vh; */
}

#main-content {
  background-color: #141922;
  overflow-y: auto;
  width: 100%;
  height: calc(100vh - 5em);
  padding: 1em;
  padding-top: 13vh;
  /* margin-top: -10vh; */
}
.secondary-menu {
  margin: 0 auto;
  width: 75%;
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
  margin-bottom: 1em;
}
.secondary-menu li > a {
  font-size: 0.7rem;
  color: #a3a3a3;
  font-weight: bold;
}
.secondary-menu li:first-child {
  position: relative;
}
.secondary-menu li:first-child::before {
  content: "";
  display: block;
  position: absolute;
  bottom: -2px;
  width: 50%;
  left: 25%;
  border-top: 2px solid green;
}

.secondary-menu a:hover {
  color: white;
}

#main-content h2 {
  margin-bottom: 1em;
  font-size: 1rem;
}

.songs-container {
  display: flex;
  gap: 1em;
  margin-bottom: 1.5em;
}
.song {
  width: calc(100% / 6 - 1em);
}
.song-img {
  position: relative;
}

.song-img:hover .overlay {
  display: block;
}
.song-img:hover .overlay-artist {
  display: block;
}
.overlay {
  position: absolute;
  background-color: rgba(0, 0, 6, 0.7);
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: none;
}
.overlay-artist {
  position: absolute;
  background-color: rgba(0, 0, 6, 0.7);
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: none;
  border-radius: 49%;
  /* border: 1px solid rgba(0, 0, 6, 0.7); */
}
#overlay-play {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 3rem;
}

.descrizione {
  margin-bottom: 1em;
}

.artist-container {
  display: flex;
  gap: 1em;
  margin-bottom: 1.5em;
}
.artist-container .song img {
  border-radius: 50%;
}
.song h3,
.artist {
  text-align: center;
  font-size: 0.7rem;
}

/* PLAYER */
footer {
  height: 5em;
  width: 100%;
  position: fixed;
  bottom: 0;
  left: 0;
  background-color: #282828;
  display: flex;
  align-items: center;
}

.player-left {
  display: flex;
  align-items: center;
  width: 30%;
}
.player-song-img {
  width: 3.5em;
  padding: 0.5em;
}
.player-song-artist-name {
  font-weight: bold;
  font-size: 0.6rem;
}
.player-song-track-name {
  font-size: 0.7rem;
  font-weight: 100;
  color: #a3a3a3;
}
.player-song-add-controls {
  margin-left: 1em;
}
.player-song-add-controls > * {
  color: #a3a3a3;
  margin-right: 0.2rem;
}
.player-song-add-controls > *:hover {
  color: white;
}

.player-centre {
  width: 40%;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.player-control-icons {
  padding: 0em 0.5em 0.5em 0.5em;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5em;
  width: 70%;
}
/* .player-control-icons > * {
  padding: 0 1em;
} */
#play {
  font-size: 1.5rem;
  margin: 0 0.5em;
}
.player-control-bar {
  display: flex;
  align-items: center;
  width: 70%;
}
.player-control-bar span {
  font-size: 0.6rem;
}
.prog-bar {
  width: 100%;
  margin: 0 0.5em;
  position: relative;
}
.prog-bar:hover .song-duration {
  height: 6px;
}
.song-duration {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 5px;
  border-radius: 40px;
  background-color: #5a5a5a;
  border-color: #5a5a5a;
}
.song-status {
  position: absolute;
  top: 0;
  left: 0;
  width: 30%;
  height: 5px;
  border-radius: 40px;
  background-color: white;
  border-color: white;
}
.song-status:hover {
  height: 6px;
}

.player-right {
  width: 30%;
  display: flex;
  align-items: center;
  justify-content: flex-end;
}
.player-right > * {
  margin-right: 1em;
}

.volume-bar {
  position: relative;
  width: 40%;
  height: 3px;
}
.volume {
  position: absolute;
  top: 0%;
  left: 0%;
  width: 90%;
  height: 5px;
  border-radius: 40px;
  background-color: #5a5a5a;
  border-color: #5a5a5a;
}
.volume-bar:hover .volume {
  height: 6px;
}
/* .volume:hover {
  height: 100%;
} */
.volume-slider {
  position: absolute;
  top: 0%;
  left: 0%;
  width: 40%;
  height: 50%;
  border-color: white;
  height: 5px;
  border-radius: 40px;
  background-color: white;
}

.volume-slider:hover {
  height: 6px;
}
/* TABLET */
@media screen and (max-width: 700px) {
  /* MAIN CONTENT */
  .secondary-menu {
    width: 80%;
  }
  .songs-container {
    flex-wrap: wrap;
  }
  .song {
    width: calc(100% / 4 - 1em);
  }
  /* PLAYER */

  .player-song-add-controls {
    margin-left: 0.4em;
  }

  .player-control-icons {
    gap: 0.5em;
  }
}

/* MOBILE */
@media screen and (max-width: 600px) {
  .container {
    width: 100%;
  }

  /* SIDEBAR */
  .sidebar {
    width: 10%;
    align-items: center;
    padding: 1em 1em 0 1em;
  }
  .sidebar span {
    display: none;
  }
  #logo-big {
    display: none;
  }
  #logo-small {
    display: block;
    width: 20px;
  }

  .menu svg {
    width: 1.5em;
  }
  .playlist {
    display: none;
  }
  .lower-menu span {
    display: none;
  }
  .lower-menu hr {
    display: none;
  }

  /* HEADER */
  header {
    width: 90%;
  }

  /* MAIN CONTENT */
  .secondary-menu {
    width: 90%;
  }
  #main-content {
    /* width: 100%; */
  }

  .song {
    width: calc(100% / 2 - 1em);
  }

  /* PLAYER */
  .player-song-info {
    width: min-content;
  }
  .player-song-add-controls {
    margin-left: 0.4em;
  }
  #play {
    margin: 0 0.5em;
  }
}

